k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  labels:
    name: sockshop-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: sock.timmy.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port: 
              number: 80
